k8s/deloyment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-go
  labels:
    app: crud-go
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crud-go
  template:
    metadata:
      labels:
        app: crud-go
    spec:
      containers:
        - name: crud-go
          image: huyahiho/crud-go:multistage
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
