k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-go
  labels:
    app: crud-go
  namespace: huycao
spec:
  replicas: 2
  selector:
    matchLabels:
      app: crud-go
  template:
    metadata:
      labels:
        app: crud-go
    spec:
      containers:
        - name: crud-go
          image: huyahiho/crud:1.1
          ports:
            - containerPort: 8000
