k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: crud-go
  namespace: default
spec:
  selector:
    app: crud-go
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
